objects/PITCHER_Q__Audit_Template_Question__c.object
<CustomObject>
    <fields>
        <fullName>PITCHER_Q__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PITCHER_Q__Audit_Question__c</fullName>
        <label>Audit Question</label>
        <referenceTo>PITCHER_Q__Audit_Questions__c</referenceTo>
        <relationshipName>Audit_Template_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>PITCHER_Q__Audit_Template__c</fullName>
        <label>Audit Template</label>
        <referenceTo>PITCHER_Q__Audit_Template__c</referenceTo>
        <relationshipName>Audit_Template_Questions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>PITCHER_Q__Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Pitcher Questionnaire Template Question</label>
    <listViews>
        <fullName>PITCHER_Q__All</fullName>
        <columns>PITCHER_Q__Audit_Question__c</columns>
        <columns>PITCHER_Q__Audit_Template__c</columns>
        <columns>PITCHER_Q__Active__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ATQ-{0000}</displayFormat>
        <label>Audit Template Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pitcher Questionnaire Template Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>